# CAI

./: .env.example  .env.production.template  .gitignore  .prettierignore  INTEGRATION_TEST_SUMMARY.md  README-DEPLOYMENT.md  README.md  SETUP_GUIDE.md  TESTING.md  WINDOWS_SETUP_GUIDE.md  check-location.bat  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  setup-windows.bat
.github/workflows/: deploy.yml  test.yml
ai-service/: .gitkeep  Dockerfile  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
ai-service/src/: main.py
ai-service/src/api/routes/: datasets.py  inference.py  models.py  training.py
ai-service/src/core/: celery_app.py  config.py  database.py  redis_client.py
ai-service/src/ml/: __init__.py
ai-service/src/ml/data/: dataset.py  transforms.py
ai-service/src/ml/evaluation/: evaluator.py
ai-service/src/ml/training/: trainer.py
ai-service/src/services/: dataset_service.py  model_service.py  training_service.py
ai-service/src/tasks/: data_processing_tasks.py  inference_tasks.py  training_tasks.py
ai-service/tests/: test_api.py  test_system_integration.py  test_training.py
backend/: .env.example  .eslintrc.cjs  Dockerfile  PERFORMANCE.md  README.md  package.json  tsconfig.json  vitest.config.ts
database/: init.sql
frontend/: index.html  nginx.conf  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
nginx/: nginx.conf  nginx.prod.conf
scripts/: generate-ssl-certs.bat  generate-ssl-certs.sh  health-check.sh  run-all-tests.bat  run-all-tests.sh  run-complete-integration-tests.bat  run-system-integration-tests.bat  run-system-integration-tests.sh  setup-dev.bat  setup-dev.sh  start-platform.bat  start-platform.sh  user-acceptance-tests.sh  validate-setup.js  validate-system-integration.js
(+208 files in other folders)
